<resources>
    <string name="app_name">Ladies doing it themselves</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">More Info</string>
    <string name="film_genres">Film genres</string>

    <string name="samples_title">Hello title</string>
    <string name="samples_subhead">Hello Subhead</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>

    <string name="about">Raeketsetsa is a dedicated programme for developing the next
                        generation of developers."\n"Stimulate and support innovative socio-economic "\n"
                innovation from the girls platform We deal with hands-on
                workshops and Activities.workshops are excellent way to give
                 a taste of what you can actually do with Technology.inorder to
                engage young womens interest, it is crucial for them not only to
                hear about technology ,but also do it."\n"young women will see that they
                 dont need to be math wizads inorder to code to be programmers.we empower
                young girls to do the following: Electronics Mobile App development Web development
                 Business Analysis</string>
    <string name="contacts">Reach out to the Geek Girls"\n"

Head Office"\n"

Mark Shuttleworth street, Enterprise Building,"\n"
The Innovation Hub, Persequor, 0087"\n"
Phone:012 844 0240"\n"
Email Address:info@reaketsetsa.com"\n"
Working Hours"\n"

Monday - Friday - 24 Hours"\n"
Saturday - 8am to 8pm"\n"
Sunday - Hibernating</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navigation_title">RAEKETSETSA</string>
    <string name="navigation_quotes">Contacts</string>
    <string name="navigation_samples">FAQ</string>
    <string name="navigation_settings">Programmes</string>
    <string name="navigation_dummy_item_1">Mobile Dev Club</string>
    <string name="navigation_dummy_item_2">Graphics, Animation and Gaming Club</string>
    <string name="navigation_dummy_item_3">Coding Club</string>
    <string name="navigation_dummy_item_4">Robot Programming Club</string>
    <string name="navigation_dummy_item_5">Digital Skills</string>
    <string name="navigation_dummy_item_6">Business Enterprise</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_event_info">EventInfoActivity</string>
    <string name="title_activity_main">MainActivity</string>


</resources>
